<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>invsee-plus-plus</artifactId>
        <groupId>com.janboerman.invsee</groupId>
        <version>0.25.2-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>invsee-plus-plus_per-world-inventory</artifactId>
    <name>InvSee++ PerWorldInventory integration</name>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.verison}</version>
                <configuration>
                    <release>8</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.ebonjaeger</groupId>
            <artifactId>perworldinventory-kt</artifactId>
            <version>2.3.2</version>
            <scope>system</scope>
            <systemPath>${basedir}/../.libs/perworldinventory-kt-2.3.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.janboerman.invsee</groupId>
            <artifactId>invsee-plus-plus_common</artifactId>
            <version>${project.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.janboerman.invsee</groupId>
            <artifactId>utils</artifactId>
            <version>${project.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

</project>